# masstemplate

./: .statignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  devenv.nix
apps/mtem-cli/: Cargo.toml
apps/mtem-cli/src/: cli.rs  lib.rs  main.rs  utils.rs
apps/mtem-cli/src/commands/: apply.rs  create.rs  info.rs  list.rs  mod.rs  sources.rs
apps/mtem-cli/tests/: integration_tests.rs
examples/: advanced-template-with-dsl.md  basic-template-creation.md  template-composition.md
lib/masstemplate-config/: Cargo.toml
lib/masstemplate-config/src/: error.rs  global_config.rs  lib.rs  models.rs  paths.rs  template_config.rs
lib/masstemplate-copier/: Cargo.toml
lib/masstemplate-copier/src/: config.rs  error.rs  filter.rs  lib.rs  prompter.rs  tasks.rs
lib/masstemplate-core/: Cargo.toml
lib/masstemplate-core/src/: applicator.rs  error.rs  file_copier.rs  lib.rs  script_runner.rs  template_finder.rs
lib/masstemplate-core/tests/: integration_tests.rs
lib/masstemplate-dsl-parser/: Cargo.toml
lib/masstemplate-dsl-parser/src/: lib.rs  parser.rs  types.rs
lib/masstemplate-fileops/: Cargo.toml
lib/masstemplate-fileops/src/: lib.rs
lib/masstemplate-hooks/: Cargo.toml
lib/masstemplate-hooks/src/: config.rs  context.rs  error.rs  hook.rs  lib.rs  manager.rs
lib/masstemplate-processing-dsl/: Cargo.toml
lib/masstemplate-processing-dsl/src/: config.rs  lib.rs  loader.rs  processor.rs
lib/masstemplate-processing-dsl/tests/: integration_tests.rs
lib/masstemplate-processors/: Cargo.toml
lib/masstemplate-processors/src/: error.rs  lib.rs  processor.rs  types.rs
lib/masstemplate-processors/src/processors/: dotenv_append.rs  dotenv_set.rs  jinja2.rs  mod.rs  replace.rs  replace_filename.rs  template.rs
lib/masstemplate-vcs/: Cargo.toml
lib/masstemplate-vcs/src/: lib.rs
script/: coverage.sh  install.sh  security-audit.sh
