[package]
name = "masstemplate-config"
version = "0.1.0"
edition = "2024"

[dependencies]
dirs = "6.0.0"
thiserror = "1.0.55"
serde = { version = "1.0.197", features = ["derive"] }
toml = "0.8.12"
tokio = { version = "1.37.0", features = ["fs", "macros", "rt-multi-thread", "test-util"] }

[dev-dependencies]
tempfile = "3.10.1"