[package]
name = "masstemplate-copier"
version = "0.2.1"
edition = "2021"

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
serde_yaml = "0.9.34"
serde_json = "1.0.115"
minijinja = { version = "1.0.12", features = ["builtins"] }
dialoguer = "0.11.0"
thiserror = "1.0.55"
tokio = { version = "1.37.0", features = ["process", "fs", "macros"] }
regex = "1.10.4"
anyhow = "1.0.82"

[dev-dependencies]
tempfile = "3.10.1"
