[package]
name = "masstemplate-dsl-parser"
version = "0.1.0"
edition = "2024"

[dependencies]
nom = "7.1.3"
thiserror = "1.0.55"
serde = { version = "1.0.197", features = ["derive"] }
regex = "1.10.4"
masstemplate-processors = { path = "../masstemplate-processors" }

[dev-dependencies]
serde_json = "1.0.115"