[package]
name = "masstemplate-processing-dsl"
version = "0.2.1"
edition = "2021"

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
anyhow = "1.0.82"
thiserror = "1.0.55"
nom = "7.1.3"
walkdir = "2.5.0"
regex = "1.10.4"
glob = "0.3.1"
masstemplate-dsl-parser = { path = "../masstemplate-dsl-parser" }
masstemplate-processors = { path = "../masstemplate-processors" }

[dev-dependencies]
tempfile = "3.10.1"